fix: hardening de seguridad en JWT, CORS, Swagger, subida de archivos y errores
- JwtAuthenticationFilter: capturar JwtException para devolver 401 en vez de 500
- JwtService: anadir Javadoc en espanol
- SecurityConfig: externalizar origenes CORS a variable de entorno CORS_ORIGINS
- PeluqueroController: validar extension de archivo antes de subir (whitelist jpg/png/webp)
- ApiExceptionHandler: anadir handlers para NoSuchElementException (404) y CitaSuperpuestaException (409)
- AntiAbuseFilter: rate limiting por IP configurable por entorno
- application.properties: swagger false por defecto, mensajes de error never, DB_USER sin default hardcodeado
- docker-compose.yml: swagger true por defecto en Docker para demo, anadir variables anti-abuso
- .env.example: documentar todas las variables incluidas SWAGGER y ANTI_ABUSE